# polymarket-cpp

./: .clang-format  .env.example  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
apps/: CMakeLists.txt  polymarket_us_cli.cpp
cmake/: polymarketConfig.cmake.in
docs/: authentication.md  order-building.md
examples/: CMakeLists.txt  market_data.cpp  order_placement.cpp  us_smoke.cpp
include/polymarket/: version.hpp
include/polymarket/clob/: client.hpp  order_builder.hpp  types.hpp  websocket.hpp
include/polymarket/core/: error.hpp  pagination.hpp  rate_limit.hpp  retry.hpp  types.hpp
include/polymarket/crypto/: ed25519.hpp  eip712.hpp  hmac.hpp  keccak.hpp  secp256k1.hpp
include/polymarket/data/: client.hpp
include/polymarket/gamma/: client.hpp
include/polymarket/http/: client.hpp
include/polymarket/us/: client.hpp
include/polymarket/us/ws/: subscriber.hpp
src/: CMakeLists.txt
src/clob/: client.cpp  order_builder.cpp  websocket.cpp
src/core/: error.cpp  types.cpp
src/crypto/: ed25519.cpp  eip712.cpp  hmac.cpp  keccak.cpp  secp256k1.cpp
src/data/: client.cpp
src/gamma/: client.cpp
src/http/: client.cpp
src/us/: client.cpp
src/us/ws/: subscriber.cpp
tests/: CMakeLists.txt  parse_benchmark.cpp
tests/unit/: clob_websocket_test.cpp  crypto_test.cpp  eip712_test.cpp  glaze_test.cpp  order_builder_test.cpp  types_test.cpp  us_cli_test.cpp  us_client_test.cpp  ws_subscriber_test.cpp
